# backend-take-home

./: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  Dockerfile.mock  METRICS_README.md  Makefile  docker-compose.yml  prometheus.yml  pyproject.toml
baseten_backend_take_home/: __init__.py  load_test.js  main.py  models.py  prometheus_metrics.py  repositories.py  test_script.py  worklet_mock_server.py
grafana/dashboards/: model_metrics.json
grafana/provisioning/dashboards/: dashboard.yml
